got layers switching more rapidly using vector tile sources

--- a/src/components/YearSlider.styl
+++ b/src/components/YearSlider.styl
@@ -19,11 +19,11 @@
       border: 2px solid #3085C7;
       //#5A98C7
     }
-    .rc-slider-dot-active {
-      border: 2px solid #3085C7;
-      background-color: #3085C7;
-      box-shadow: 0px 0px 2px 1px rgba(255, 255, 255, 0.2);
-    }
+    // .rc-slider-dot-active {
+    //   border: 2px solid #3085C7;
+    //   background-color: #3085C7;
+    //   box-shadow: 0px 0px 2px 1px rgba(255, 255, 255, 0.2);
+    // }
   }
 }
 
