minor style changes

--- a/src/components/YearSlider.styl
+++ b/src/components/YearSlider.styl
@@ -1,29 +1,24 @@
 .year-slider {
-  height: 20px;
+  height: 30px;
   margin-top: 10px;
   margin-left: 20px;
   margin-right: 20px;
   margin-bottom: 8px;
   z-index: 400;
   .rc-slider-handle {
-    border-color: #3085C7;
+    border-color: rgb(30,30,30);
     width: 14px;
     height: 14px;
     cursor: pointer;
     border-radius: 50%;
   }
   .rc-slider-step {
-    background-color: #3085C7;
+    background-color: rgb(30,30,30);
     cursor: pointer;
     .rc-slider-dot {
-      border: 2px solid #3085C7;
+      border: 2px solid rgb(30,30,30);
       //#5A98C7
     }
-    // .rc-slider-dot-active {
-    //   border: 2px solid #3085C7;
-    //   background-color: #3085C7;
-    //   box-shadow: 0px 0px 2px 1px rgba(255, 255, 255, 0.2);
-    // }
   }
 }
 
@@ -33,7 +28,7 @@
   left: 0;
   width: 100%;
   font-size: 10pt;
-  color: #3085C7;
+  color: rgb(30,30,30);
   .rc-slider-mark-text {
     font-family: 'PT Sans', sans-serif;
     font-weight: 700;
@@ -43,9 +38,6 @@
     vertical-align: middle;
     text-align: center;
     cursor: pointer;
-    color: rgba(30, 84, 125, .7);
-  }
-  .rc-slider-mark-text-active {
-    color: #1E547D;
+    color: rgb(30, 30, 30);
   }
 }
