--- a/src/AppInterface.styl
+++ b/src/AppInterface.styl
@@ -1,14 +1,16 @@
 .AppInterface{
   position: absolute;
   z-index: 100;
-  top: 10px;
-  left:10px;
-  height: 10px;
+  height: 100vh;
+  width: 100vw;
   .title{
+    position: absolute;
     background-color: rgba(255,255,255,.8)
     border-radius: 4px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 900;
     padding: 3px;
+    top: 10px;
+    left: 10px;
   }
 }
