--- a/src/AppInterface.styl
+++ b/src/AppInterface.styl
@@ -1,8 +1,9 @@
 .AppInterface{
   position: absolute;
   z-index: 100;
-  height: 100vh;
   width: 100vw;
+  height: 100vh;
+  pointer-events: none;
   .title{
     position: absolute;
     background-color: rgba(255,255,255,.8)
@@ -12,5 +13,6 @@
     padding: 3px;
     top: 10px;
     left: 10px;
+    pointer-events:auto;
   }
 }
