--- a/src/components/YearSwitchPane.styl
+++ b/src/components/YearSwitchPane.styl
@@ -5,6 +5,7 @@
   width: 400px;
   bottom: 10px;
   left: 10px;
+  pointer-events:auto;
   .yearSwitchTitle{
     position: relative;
     top: 5px;
