legend up and running, ready to be hooked up to field switches

--- a/src/AppInterface.styl
+++ b/src/AppInterface.styl
@@ -10,6 +10,7 @@
     border-radius: 4px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 900;
+    color: black;
     padding: 3px;
     top: 10px;
     left: 10px;
