--- a/src/components/Legend.styl
+++ b/src/components/Legend.styl
@@ -1,17 +1,15 @@
-.yearSwitchPane{
+.legend{
   position: absolute;
   background-color: rgba(255,255,255,.8);
   border-radius: 4px;
-  width: 400px;
-  bottom: 10px;
+  width: 200px;
   left: 10px;
+  top: 42.5px;
   pointer-events:auto;
-  .yearSwitchTitle{
-    position: relative;
-    top: 5px;
-    left: 5px;
+  .legendTitle{
     font-family: 'Montserrat', sans-serif;
     font-weight: 900;
     color: black;
+    left: 5px;
   }
 }
