--- a/src/components/YearSlider.styl
+++ b/src/components/YearSlider.styl
@@ -30,7 +30,7 @@
   font-size: 10pt;
   color: rgb(30,30,30);
   .rc-slider-mark-text {
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 700;
      font-size: 10pt;
     position: absolute;
