--- a/src/components/Legend.styl
+++ b/src/components/Legend.styl
@@ -2,14 +2,14 @@
   position: absolute;
   background-color: rgba(255,255,255,.8);
   border-radius: 4px;
-  width: 200px;
   left: 10px;
   top: 42.5px;
   pointer-events:auto;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
   .legendTitle{
     font-family: 'Montserrat', sans-serif;
     font-weight: 900;
     color: black;
-    left: 5px;
+    padding-left: 5px;
   }
 }
