--- a/src/components/YearSlider.styl
+++ b/src/components/YearSlider.styl
@@ -6,17 +6,31 @@
   margin-bottom: 8px;
   z-index: 400;
   .rc-slider-handle {
-    border-color: rgb(30,30,30);
+    border-color: rgb(30, 30, 30);
+    background-color: white;
     width: 14px;
     height: 14px;
     cursor: pointer;
     border-radius: 50%;
+    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.35);
+    transition: box-shadow 0.3s ease-in-out;
+    &:hover {
+      background-color: rgb(245, 245, 245);
+      box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
+    }
   }
   .rc-slider-step {
-    background-color: rgb(30,30,30);
+    background-color: rgb(30, 30, 30);
     cursor: pointer;
     .rc-slider-dot {
-      border: 2px solid rgb(30,30,30);
+      background-color: rgb(30, 30, 30);
+      border: 2px solid rgb(30, 30, 30);
+      box-shadow: 0px 0px 3px rgba(200, 200, 200, 0.35);
+      transition: box-shadow 0.3s ease-in-out;
+      &:hover {
+        background-color: rgb(90, 90, 90);
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
+      }
       //#5A98C7
     }
   }
@@ -28,11 +42,11 @@
   left: 0;
   width: 100%;
   font-size: 10pt;
-  color: rgb(30,30,30);
+  color: rgb(30, 30, 30);
   .rc-slider-mark-text {
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
-     font-size: 10pt;
+    font-size: 10pt;
     position: absolute;
     display: inline-block;
     vertical-align: middle;
