style changes and component organization

--- a/src/AppInterface.styl
+++ b/src/AppInterface.styl
@@ -17,4 +17,10 @@
     pointer-events:auto;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
   }
+  .switchPanes{
+    position: absolute;
+    width: 300px;
+    bottom: 10px;
+    left: 10px;
+  }
 }
