--- a/src/components/YearSwitchPane.styl
+++ b/src/components/YearSwitchPane.styl
@@ -1,10 +1,6 @@
 .yearSwitchPane {
-  position: absolute;
   background-color: rgba(255, 255, 255, .8);
   border-radius: 4px;
-  width: 300px;
-  bottom: 10px;
-  left: 10px;
   pointer-events: auto;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
   transition: box-shadow 0.3s ease-in-out;
@@ -18,5 +14,8 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 900;
     color: black;
+  }
+  .paneSpacerHorizontal{
+    height: 5px;
   }
 }
