--- a/src/components/YearSlider.styl
+++ b/src/components/YearSlider.styl
@@ -3,7 +3,6 @@
   margin-top: 10px;
   margin-left: 20px;
   margin-right: 20px;
-  margin-bottom: 8px;
   z-index: 400;
   .rc-slider-handle {
     border-color: rgb(30, 30, 30);
@@ -15,7 +14,6 @@
     box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.35);
     transition: box-shadow 0.3s ease-in-out;
     &:hover {
-      background-color: rgb(245, 245, 245);
       box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
     }
   }
@@ -25,11 +23,9 @@
     .rc-slider-dot {
       background-color: rgb(30, 30, 30);
       border: 2px solid rgb(30, 30, 30);
-      box-shadow: 0px 0px 3px rgba(200, 200, 200, 0.35);
-      transition: box-shadow 0.3s ease-in-out;
       &:hover {
         background-color: rgb(90, 90, 90);
-        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
+        border: 2px solid rgb(90, 90, 90);
       }
       //#5A98C7
     }
