--- a/src/components/FieldSwitchPane.styl
+++ b/src/components/FieldSwitchPane.styl
@@ -1,4 +1,5 @@
 .fieldSwitchPane {
+  height: 59px;
   margin-bottom: 10px;
   background-color: rgba(255, 255, 255, .8);
   border-radius: 4px;
@@ -16,7 +17,10 @@
     font-weight: 900;
     color: black;
   }
+  .fieldNodes{
+    margin-top: 10px; 
+  }
   .paneSpacerHorizontal{
-    height: 5px;
+    height: 0px;
   }
 }
