field switching is working, now need to hook up legend to field switches

--- a/src/components/FieldSwitchButton.styl
+++ b/src/components/FieldSwitchButton.styl
@@ -9,6 +9,7 @@
   float: left;
   transition-duration: 0.2s;
   .fieldSwitchText {
+    pointer-events: none;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     padding-left: 3px;
