finished bascic table in selectionPane, added selection formatting for map.jsx, and added unit and color order conditions to style generator to allow anticipation of dollar and integers

--- a/src/AppInterface.styl
+++ b/src/AppInterface.styl
@@ -1,12 +1,12 @@
-.AppInterface{
+.AppInterface {
   position: absolute;
   z-index: 100;
   width: 100vw;
   height: 100vh;
   pointer-events: none;
-  .title{
+  .title {
     position: absolute;
-    background-color: rgba(255,255,255,.8)
+    background-color: rgba(255, 255, 255, .8);
     border-radius: 4px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 900;
@@ -14,16 +14,16 @@
     padding: 3px;
     top: 10px;
     left: 10px;
-    pointer-events:auto;
+    pointer-events: auto;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
   }
-  .switchPanes{
+  .switchPanes {
     position: absolute;
     width: 300px;
     bottom: 10px;
     left: 10px;
   }
-  .selectionPane{
+  .selectionPane {
     position: absolute;
     bottom: 30px;
     right: 10px;
