--- a/src/components/SelectionTableEntry.styl
+++ b/src/components/SelectionTableEntry.styl
@@ -2,10 +2,10 @@
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 9pt;
-  height: 15px;
   border-left: 1px;
   border-right: 1px;
   text-indent: 5px;
+  padding: 2px;
   #col1{
     width: 100px;
   }
