d3 charts in a much better spot now

--- a/src/components/SelectionGraphs.styl
+++ b/src/components/SelectionGraphs.styl
@@ -3,6 +3,7 @@
   height: 250;
   width: 90%;
   left: 5%;
+  z-index:100
   .chartTitleBar {
     position: relative;
     width: 100%
@@ -30,7 +31,8 @@
       border-bottom-color: white;
     }
   }
-  .lineChart {
-    border-top-width: 1px;
+  .rd3-chart{
+    z-index: 101;
+    font-size: 7pt;
   }
 }
