more formatting on D3

--- a/src/components/SelectionGraphs.styl
+++ b/src/components/SelectionGraphs.styl
@@ -3,7 +3,7 @@
   height: 250;
   width: 90%;
   left: 5%;
-  z-index:100
+  z-index:1000
   .chartTitleBar {
     position: relative;
     width: 100%
@@ -32,7 +32,12 @@
     }
   }
   .rd3-chart{
-    z-index: 101;
-    font-size: 7pt;
+    z-index:1000
+    .rd3-linechart-yaxis{
+      font-size: 7pt;
+    }
+    .rd3-linechart-xaxis{
+      font-size: 8pt;
+    }
   }
 }
