added a stupid zoomToFeature on the selection pane that is dumb and stupid

--- a/src/components/SelectionPaneContent.styl
+++ b/src/components/SelectionPaneContent.styl
@@ -5,6 +5,7 @@
   width: 90%;
   left:5%;
   .selectionTitle{
+    float: left;
     position: relative;
     left: 5px;
     vertical-align: middle;
