added tooltips to fields

--- a/src/components/SelectionPaneZoom.styl
+++ b/src/components/SelectionPaneZoom.styl
@@ -1,11 +1,8 @@
 .selectionPaneZoom{
-  position: relative;
-  float: right;
+  float: left;
   cursor: pointer;
-  vertical-align: middle;
   top: 3px;
   padding-left: 20px;
-  padding-right: 0px;
   .fa-arrows-alt{
     font-size: 9pt;
     color: rgb(110,110,110);
