--- a/src/index.styl
+++ b/src/index.styl
@@ -42,13 +42,10 @@ body {
 /* Position tooltip above the element */
 [data-tooltip]:before {
   position: absolute;
-  bottom: 150%;
-  // left: 50%;
-  margin-bottom: -10px;
-  margin-left: -20px;
+  bottom: 120%;
   padding: 2px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
+  padding-left: 2px;
+  padding-right: 2px;
   border-radius: 3px;
   background-color: #000;
   background-color: hsla(0, 0%, 20%, 0.9);
@@ -57,22 +54,6 @@ body {
   text-align: center;
   font-size: 10px;
   line-height: 1.2;
-}
-
-/* Triangle hack to make tooltip look like a speech bubble */
-[data-tooltip]:after {
-  position: absolute;
-  bottom: 150%;
-  left: 50%;
-  margin-left: -5px;
-  width: 0;
-  border-top: 5px solid #000;
-  border-top: 5px solid hsla(0, 0%, 20%, 0.9);
-  border-right: 5px solid transparent;
-  border-left: 5px solid transparent;
-  content: " ";
-  font-size: 0;
-  line-height: 0;
 }
 
 /* Show tooltip content on hover */
