minor styling changes

--- a/src/components/MBFullExtentButton.styl
+++ b/src/components/MBFullExtentButton.styl
@@ -9,7 +9,7 @@
   &:hover{
     background-color: #F3F3F3;
   }
-  .fa-expand{
+  .fa-arrows-alt{
     position: relative;
     left: 6.5px;
     top: 6px;
