--- a/src/components/SelectionPaneZoom.styl
+++ b/src/components/SelectionPaneZoom.styl
@@ -3,7 +3,7 @@
   cursor: pointer;
   top: 3px;
   padding-left: 20px;
-  .fa-arrows-alt{
+  .fa-search-plus{
     font-size: 9pt;
     color: rgb(110,110,110);
     &:hover{
