--- a/src/AppInterface.styl
+++ b/src/AppInterface.styl
@@ -4,33 +4,5 @@
   width: 100vw;
   height: 100vh;
   pointer-events: none;
-  .title {
-    position: absolute;
-    background-color: rgba(255, 255, 255, .8);
-    border-radius: 2px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
-    color: black;
-    padding: 3px;
-    top: 10px;
-    left: 10px;
-    pointer-events: auto;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
-  }
-  .switchPanes {
-    position: absolute;
-    width: 300px;
-    bottom: 10px;
-    left: 10px;
-  }
-  .selectionPane {
-    position: absolute;
-    bottom: 30px;
-    right: 10px;
-  }
-  .mapboxButtons {
-    position: absolute;
-    top: 110px;
-    right: 10px;
-  }
+  // turn pointer events on for all children of the AppInterface
 }
