--- a/src/index.styl
+++ b/src/index.styl
@@ -16,10 +16,10 @@ body {
 #app-wrapper {
   height: 100vh;
   width: 100vw;
-  position: relative;
-  display: flex;
-  align-items: right;
-  justify-content: right;
+  // position: relative;
+  // display: flex;
+  // align-items: right;
+  // justify-content: right;
   background: none;
 }
 
