got basic navigation bar working

--- a/src/components/sidebar/Sidebar.styl
+++ b/src/components/sidebar/Sidebar.styl
@@ -6,6 +6,7 @@
   width: 336px;
   background-color: white;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
+  pointer-events: auto;
   .sidebarPane{
     position: absolute;
     top: 0px;
