--- a/src/components/sidebar/navBar/NavBar.styl
+++ b/src/components/sidebar/navBar/NavBar.styl
@@ -8,3 +8,8 @@
   left: 0px;
   z-index: 100;
 }
+.navBarTooltips{
+  padding: 4px!important;
+  font-size: 12pt!important;
+  background-color: rgba(10,131,201, .9)!important;
+}
