--- a/src/Map.styl
+++ b/src/Map.styl
@@ -4,3 +4,61 @@
   left: 336px;
   width: calc(100vw - 336px);
 }
+
+.mapboxgl-popup-content {
+  height: 140px;
+  padding: 5px;
+  .selection {
+    position: relative;
+    height: 30px;
+    .selectionTitle {
+      margin-left: 3px;
+      position: relative;
+      vertical-align: middle;
+      line-height: 30px;
+      font-weight: 525;
+      font-size: 10pt;
+      color: rgb(20, 20, 20);
+    }
+    .tableContainer{
+      height: 100px;
+      overflow-y: scroll;
+      border: 1px solid rgb(220,220,220);
+      tr{
+        font-size: 8.5pt;
+        td{
+          padding: 2px;
+          height: 25px;
+          .span-property{
+            color: rgb(20,20,20);
+          }
+          .span-value{
+            color: rgb(35,35,35);
+          }
+        }
+        .td-property{
+          border-right-width: .5px;
+          border-right-style: solid;
+          border-right-color: rgb(220,220,220);
+        }
+        .td-value{
+          border-right-width: .5px;
+          border-right-style: solid;
+          border-right-color: rgb(230,230,230);
+          padding-left: 5px;
+        }
+      }
+      .tr-dark{
+        background-color: rgba(240,240,240,.9); 
+      }
+      #tr-final{
+        td{
+          border-bottom-width: 0px;
+        }
+      }
+    }
+  }
+  .paneSpacerHorizontal {
+    height: 5px;
+  }
+}
