--- a/src/components/sidebar/navBar/NavBar.styl
+++ b/src/components/sidebar/navBar/NavBar.styl
@@ -8,8 +8,12 @@
   left: 0px;
   z-index: 100;
 }
-.navBarTooltips{
+.navBarTooltip{
   padding: 4px!important;
   font-size: 12pt!important;
-  background-color: rgba(10,131,201, .9)!important;
+  background-color: rgba(10,131,201, 1)!important;
+  opacity: 1!important;
+}
+.__react_component_tooltip.place-right:after {
+  border: 0 !important;
 }
