--- a/src/components/sidebar/analysisPane/filters/FiltersSection.styl
+++ b/src/components/sidebar/analysisPane/filters/FiltersSection.styl
@@ -1,47 +1,60 @@
-.header{
+.header {
   border-bottom: 2px solid #0A83C9;
-  height: 27px;
-  .header-title{
+  height: 30px;
+  .header-title {
     font-size: 14pt;
     font-weight: 600;
     color: #0A83C9;
     line-height: 27px;
-    .fa-filter{
+    .fa-filter {
       margin-left: 10px;
     }
-    .addFilterButton{
+    .addFilterButton {
+      position: relative;
       height: 22.5px;
       width: 22.5px;
       border-radius: 100%;
       float: right;
       background-color: #0A83C9;
-      box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5);
-      text-align: center;
-      line-height: 22.5px;
-      margin-bottom: 3px;
+      box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25);
+      margin: 3px;
       cursor: pointer;
       transition-duration: .2s;
-      .fa-plus{
-        margin-left: 0px;
-        float: none;
-        color: white;
-        font-size: 12pt;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .faPlusRotator {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        -webkit-backface-visibility: hidden;
+        transition-duration: .15s;
+        transition-timing-function: linear;
+        .fa-plus{
+          font-size: 11pt;
+          color: white;
+          margin-top: 2px;
+        }
       }
-      &:hover{
-        box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.5);
+      &:hover {
+        box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4);
       }
     }
   }
 }
-.filtersContainer{
+
+.filtersContainer {
   margin-top: 5px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-.addFilterTooltip{
-  padding: 4px!important;
-  font-size: 11pt!important;
-  font-weight: 300;
-  // background-color: rgba(10,131,201, .9)!important;
-}
+
+// .addFilterTooltip {
+//   padding: 4px!important;
+//   font-size: 11pt!important;
+//   font-weight: 300;
+//   // background-color: rgba(10,131,201, .9)!important;
+// }
