--- a/src/components/sidebar/analysisPane/filters/FiltersSection.styl
+++ b/src/components/sidebar/analysisPane/filters/FiltersSection.styl
@@ -42,6 +42,14 @@
         box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4);
       }
     }
+    .addFilterButton-inactive{
+      opacity: .5;
+      box-shadow: 0px 0px 6px rgba(0, 0, 0, 0);
+      cursor: default;
+      &:hover{
+        box-shadow: 0px 0px 6px rgba(0, 0, 0, 0);
+      }
+    }
   }
 }
 
