got the filter settings memory object working, but it needs to be tested

--- a/src/components/sidebar/analysisPane/filters/FiltersSection.styl
+++ b/src/components/sidebar/analysisPane/filters/FiltersSection.styl
@@ -58,6 +58,17 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  .noFiltersMessage-container {
+    height: 108px;
+    width: 95%;
+    margin-top: 5px;
+    text-align: center;
+    line-height: 108px;
+    .noFiltersMessage{
+      font-size: 20pt;
+      color: rgb(237,237,237);
+    }
+  }
 }
 
 // .addFilterTooltip {
