--- a/src/components/sidebar/analysisPane/commonComponents/OnOffSlider.styl
+++ b/src/components/sidebar/analysisPane/commonComponents/OnOffSlider.styl
@@ -9,7 +9,8 @@
     position: relative;
     margin-top: -5px;
     cursor: pointer;
-    transition-duration: .2s;
+    // removed transitions for now, transition was running on filter removal...
+    // transition-duration: .2s;
     .slidingBead{
       position: absolute;
       height: 10px;
@@ -17,7 +18,7 @@
       border-radius: 10px;
       background-color: white;
       box-shadow: 0px 0px 1.5px rgba(0, 0, 0, 0.35);
-      transition-duration: .1s;
+      // transition-duration: .1s;
     }
   }
 }
