--- a/src/components/sidebar/analysisPane/filters/Filter.styl
+++ b/src/components/sidebar/analysisPane/filters/Filter.styl
@@ -79,4 +79,25 @@
       margin-left: 5px;
     }
   }
+  .rangeSelector{
+    // length of Range title is 47.45
+    .sliderContainer{
+      position: relative;
+      float: right;
+      top: 50%;
+      margin-top: -7px;
+      margin-left: 10px;
+      margin-right: 10px;
+      width: calc(100% - 47.45px - 10px - 20px);
+      .slider{
+        .rc-slider-handle{
+          border: none;
+          box-shadow: 0px 0px 1.5px rgba(0, 0, 0, 0.6);
+        }
+        .rc-slider-track-1{
+          background-color: #1B9AF7
+        }
+      }
+    }
+  }
 }
