--- a/src/components/sidebar/analysisPane/commonComponents/ActiveSlider.styl
+++ b/src/components/sidebar/analysisPane/commonComponents/ActiveSlider.styl
@@ -1,4 +1,4 @@
-.onOffSlider{
+.activeSlider{
   height: 100%;
   width: 25px;
   .slidingContainer{
@@ -22,7 +22,7 @@
     }
   }
 }
-.onOffSlider-on{
+.activeSlider-true{
   .slidingContainer{
     background-color: #81C784;
     .slidingBead{
@@ -30,7 +30,7 @@
     }
   }
 }
-.onOffSlider-off{
+.activeSlider-false{
   .slidingContainer{
     background-color: tomato; 
     .slidingBead{
