--- a/src/components/sidebar/analysisPane/filters/Filter.styl
+++ b/src/components/sidebar/analysisPane/filters/Filter.styl
@@ -35,7 +35,7 @@
         border-bottom: 1px solid rgb(150,150,150);
       }
     }
-    .onOffSlider{
+    .activeSlider{
       float: right;
       margin-right: 10px;
     }
