got props hooked up to filters

--- a/src/components/sidebar/analysisPane/commonComponents/ActiveSlider.styl
+++ b/src/components/sidebar/analysisPane/commonComponents/ActiveSlider.styl
@@ -10,7 +10,7 @@
     margin-top: -5px;
     cursor: pointer;
     // removed transitions for now, transition was running on filter removal...
-    // transition-duration: .2s;
+    transition-duration: .2s;
     .slidingBead{
       position: absolute;
       height: 10px;
@@ -18,7 +18,7 @@
       border-radius: 10px;
       background-color: white;
       box-shadow: 0px 0px 1.5px rgba(0, 0, 0, 0.35);
-      // transition-duration: .1s;
+      transition-duration: .1s;
     }
   }
 }
