--- a/src/Map.styl
+++ b/src/Map.styl
@@ -17,7 +17,7 @@
       position: relative;
       vertical-align: middle;
       line-height: 30px;
-      font-weight: 575;
+      font-weight: 600;
       font-size: 10pt;
       color: rgb(10, 10, 10);
     }
@@ -49,6 +49,7 @@
           border-right-style: solid;
           border-right-color: rgb(230,230,230);
           padding-left: 5px;
+          max-width: 120px;
         }
       }
       .tr-dark{
