--- a/src/components/sidebar/analysisPane/filters/Filter.styl
+++ b/src/components/sidebar/analysisPane/filters/Filter.styl
@@ -12,6 +12,7 @@
   transition-timing-function: linear;
   &:hover{
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+    background-color: rgb(252,252,252);
   }
   .filterSection{
     width: 100%;
@@ -80,12 +81,8 @@
       // overflow-y: scroll;
     }
     .select-field{
-      width: calc(100% - 37px - 70px - 18px);
-      margin-left: 5px;
-    }
-    .select-year{
-      width: 70px;
-      margin-left: 5px;
+      width: calc(100% - 37px - 18px);
+      margin-left: 7px;
     }
   }
   .rangeSelector{
