--- a/src/components/sidebar/analysisPane/filters/Filter.styl
+++ b/src/components/sidebar/analysisPane/filters/Filter.styl
@@ -1,112 +1,152 @@
-.filter{
-  height: 108px;
+.filter {
+  height: 138px;
   position: relative;
   width: calc(95% + 4px);
   padding-right: 4px;
   margin-top: 5px;
-  background-color: rgb(250,250,250);
+  background-color: rgb(250, 250, 250);
   box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
-  border-top: .5px solid rgb(200,200,200);
-  border-left: .5px solid rgb(200,200,200);
+  border-top: .5px solid rgb(200, 200, 200);
+  border-left: .5px solid rgb(200, 200, 200);
   transition-duration: .08s;
   transition-timing-function: linear;
-  &:hover{
+  &:hover {
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
-    background-color: rgb(252,252,252);
+    background-color: rgb(252, 252, 252);
   }
-  .filterSection{
+  .filterSection {
     width: 100%;
     height: 33px;
     // border: 1px solid rgba(255,0,0,.1);
     padding: 2px;
-    .filterSection-title{
+    .filterSection-title {
       display: block;
       position: relative;
       top: 50%;
       float: left;
-      color: rgb(20,20,20)
+      // color: rgb(20, 20, 20);
+      color: #11639E;
       font-weight: 550;
       margin-top: -10px;
       margin-left: 2.5px;
       margin-right: 2.5px;
     }
   }
-  .titleAndControls{
-    .titleInput{
-      background-color: rgba(255,255,255,0);
+  .titleAndControls {
+    margin-bottom: 5px;
+    .titleInput {
+      background-color: rgba(255, 255, 255, 0);
       border: none;
-      border-bottom: 1px solid rgb(200,200,200);
+      border-bottom: 1px solid rgb(200, 200, 200);
       height: 100%;
-      color: rgb(20,20,20);
+      color: rgb(20, 20, 20);
       padding: 3px;
-      width: 60%;
+      margin-left: 5px;
+      width: calc(100% - 75px);
       font-style: italic;
-      &:focus{
-        border-bottom: 1px solid rgb(150,150,150);
+      &:focus {
+        border-bottom: 1px solid rgb(150, 150, 150);
       }
     }
-    .activeSlider{
+    .activeSlider {
       float: right;
       margin-right: 10px;
     }
-    .removeFilterButton{
+    .removeFilterButton {
       height: 100%;
       line-height: 100%;
       text-align: center;
       float: right;
-      .fa-trash{
+      .fa-trash {
         font-size: 13.5pt;
-        color: rgb(80,80,80);
+        color: rgb(80, 80, 80);
         transition-duration: .1s;
         top: 19%;
         position: relative;
         margin-right: 4px;
         cursor: pointer;
       }
-      &:hover{
-        .fa-trash{
+      &:hover {
+        .fa-trash {
           color: tomato;
         }
       }
     }
   }
-  .fieldSelector{
+  .fieldSelector {
     height: 42px;
-    .select{
+    .select {
       // height: 80%;
       display: block;
       float: left;
+      font-size: 11pt;
       // float: left;
       // max-height: 100px;
       // overflow-y: scroll;
     }
-    .select-field{
+    .select-field {
       width: calc(100% - 37px - 18px);
       margin-left: 7px;
     }
   }
-  .rangeSelector{
+  .rangeSelector {
     // length of Range title is 47.45
-    .sliderContainer{
+    height: 63px;
+    .sliderContainer {
+      height: 40px;
       position: relative;
       float: right;
       top: 50%;
-      margin-top: -7px;
+      margin-top: -20px;
       margin-left: 10px;
       margin-right: 10px;
       width: calc(100% - 47.45px - 10px - 20px);
-      .slider{
-        .rc-slider-handle{
+      .slider {
+        position: absolute;
+        bottom: 0px;
+        .rc-slider-handle {
           border: none;
           box-shadow: 0px 0px 1.5px rgba(0, 0, 0, 0.6);
         }
-        .rc-slider-track-1{
+        .rc-slider-track-1 {
           background-color: #1B9AF7
+        }
+      }
+      .rangeInputContainer {
+        margin-bottom: 3px;
+        width: 100%;
+        .rangeInputSubCont-min {
+          float: left;
+        }
+        .rangeInputSubCont-max {
+          float: right;
+        }
+        .rangeInputSubCont {
+          .rangeInputLabel {
+            font-size: 9pt;
+            color: #11639E;
+          }
+          .rangeInputLabel-min{
+            margin-left: 5px;
+          }
+          .rangeInputLabel-max{
+            margin-right: 5px;
+          }
+          .rangeInput {
+            width: 75px;
+            height: 20px;
+            font-size: 9.5pt;
+            padding-left: 3px;
+            padding-right: 3px;
+            border-radius: 3px;
+          }
+          .rangeInput-min {}
+          .rangeInput-max {}
         }
       }
     }
   }
-  .validationBar{
+  .validationBar {
     position: absolute;
     right: 0px;
     top: 0px;
@@ -114,10 +154,10 @@
     height: 100%;
     opacity: .7;
   }
-  .validationBar-true{
+  .validationBar-true {
     background-color: #81C784;
   }
-  .validationBar-false{
+  .validationBar-false {
     background-color: tomato;
   }
 }
