got the range inputs optimized and the validator working differently

--- a/src/components/sidebar/analysisPane/filters/Filter.styl
+++ b/src/components/sidebar/analysisPane/filters/Filter.styl
@@ -30,6 +30,8 @@
       margin-top: -10px;
       margin-left: 2.5px;
       margin-right: 2.5px;
+      user-select: none;
+      cursor: default;
     }
   }
   .titleAndControls {
@@ -37,7 +39,7 @@
     .titleInput {
       background-color: rgba(255, 255, 255, 0);
       border: none;
-      border-bottom: 1px solid rgb(200, 200, 200);
+      border-bottom: 1px solid rgb(235, 235, 235);
       height: 100%;
       color: rgb(20, 20, 20);
       padding: 3px;
@@ -125,6 +127,8 @@
           .rangeInputLabel {
             font-size: 9pt;
             color: #11639E;
+            user-select: none;
+            cursor: default;
           }
           .rangeInputLabel-min{
             margin-left: 5px;
