optimized a few things and added feature count to the filter area

--- a/src/components/sidebar/analysisPane/filters/FiltersSection.styl
+++ b/src/components/sidebar/analysisPane/filters/FiltersSection.styl
@@ -9,6 +9,12 @@
     .fa-filter {
       margin-left: 10px;
     }
+    .featureCountMessage{
+      opacity: .8;
+      font-size: 10pt;
+      font-weight: 400;
+      margin-left: 20px;
+    }
     .addFilterButton {
       position: relative;
       height: 22.5px;
