got the visualization section firing for class-based visualization

--- a/src/components/sidebar/analysisPane/filters/FiltersSection.styl
+++ b/src/components/sidebar/analysisPane/filters/FiltersSection.styl
@@ -69,6 +69,8 @@
     width: 95%;
     text-align: center;
     line-height: 143px;
+    user-select: none;
+    cursor: default;
     .noFiltersMessage{
       font-size: 20pt;
       color: rgb(237,237,237);
