added functionality to legend, including interaction with the map

--- a/src/components/legend/Legend.styl
+++ b/src/components/legend/Legend.styl
@@ -15,6 +15,7 @@
     .legend-title{
       color: white;
       font-size: 12pt;
+      font-weight: bold;
       width: 100%;
       .fa-list-ul{
         float: right;
@@ -23,7 +24,15 @@
       }
     }
   }
+  .legend-subtitleBar{
+    .legend-subtitle{
+      font-weight: bold;
+    }
+  }
   .legend-content{
     padding: 4px;
+    .legend-nodesContainer{
+      padding: 4px;
+    }
   }
 }
