--- a/src/components/legend/LegendEntry.styl
+++ b/src/components/legend/LegendEntry.styl
@@ -3,12 +3,18 @@
   line-height: 25px;
   position: relative;
   width: 100%;
+  border-radius: 3px;
+  // margin-bottom: 2px;
+  &:hover{
+    background-color: rgba(0,0,0,.1)
+  }
   .legendEntry-colorSquare{
     height: 15px;
     width: 15px;
     position: relative;
     border-radius: 3px;
     float: left;
+    margin-left: 2px;
     margin-right: 8px;
     top: 50%;
     margin-top: -7.5px;
