--- a/src/components/legend/LegendEntry.styl
+++ b/src/components/legend/LegendEntry.styl
@@ -1,13 +1,17 @@
+.legendEntry-active{
+  &:hover{
+    background-color: rgba(0,0,0,.1)
+  }
+}
 .legendEntry{
   height: 25px;
   line-height: 25px;
   position: relative;
   width: 100%;
   border-radius: 3px;
+  cursor: pointer;
   // margin-bottom: 2px;
-  &:hover{
-    background-color: rgba(0,0,0,.1)
-  }
+  
   .legendEntry-colorSquare{
     height: 15px;
     width: 15px;
