added color intelligence to the map to optimize handling of lighter colors

--- a/src/components/legend/LegendEntry.styl
+++ b/src/components/legend/LegendEntry.styl
@@ -1,6 +1,12 @@
 .legendEntry-active{
   &:hover{
-    background-color: rgba(0,0,0,.1)
+    background-color: rgba(0,0,0,.05)
+    .legendEntry-colorSquare{
+      opacity: 1
+      .legendEntry-colorSquare-inner{
+        opacity: .75
+      }
+    }
   }
 }
 .legendEntry{
