--- a/src/mapbox/Map.styl
+++ b/src/mapbox/Map.styl
@@ -20,6 +20,11 @@
       font-weight: 600;
       font-size: 10pt;
       color: rgb(10, 10, 10);
+      .selectionSubtitle {
+        font-weight: 200;
+        font-size: 7pt;
+        color: rgb(100, 100, 100);
+      }
     }
     .tableContainer{
       height: 100px;
@@ -30,6 +35,7 @@
         td{
           padding: 2px;
           height: 25px;
+          max-width: 130px;
           .span-property{
             font-weight: 400;
             color: rgb(10,10,10);
@@ -43,6 +49,9 @@
           border-right-width: .5px;
           border-right-style: solid;
           border-right-color: rgb(220,220,220);
+        }
+        .td-propert-long{
+
         }
         .td-value{
           border-right-width: .5px;
