major refactoring of the filter and visualization user interface and UI logic

--- a/src/components/sidebar/analysisPane/filters/Filter.styl
+++ b/src/components/sidebar/analysisPane/filters/Filter.styl
@@ -1,5 +1,5 @@
 .filter {
-  height: 138px;
+  height: 178px;
   position: relative;
   width: calc(95% + 4px);
   padding-right: 4px;
@@ -87,6 +87,22 @@
       // overflow-y: scroll;
     }
     .select-field {
+      width: calc(100% - 37px - 18px);
+      margin-left: 7px;
+    }
+  }
+  .yearSelector {
+    height: 42px;
+    .select {
+      // height: 80%;
+      display: block;
+      float: left;
+      font-size: 11pt;
+      // float: left;
+      // max-height: 100px;
+      // overflow-y: scroll;
+    }
+    .select-year {
       width: calc(100% - 37px - 18px);
       margin-left: 7px;
     }
