finished majority of visualizer/filter fixes

--- a/src/components/sidebar/analysisPane/visualization/Visualizer.styl
+++ b/src/components/sidebar/analysisPane/visualization/Visualizer.styl
@@ -80,13 +80,29 @@
     .select {
       // height: 80%;
       display: block;
+      float: left;
       font-size: 11pt;
       // float: left;
       // max-height: 100px;
       // overflow-y: scroll;
     }
     .select-field {
+      width: calc(100% - 37px - 18px);
+      margin-left: 7px;
+    }
+  }
+  .yearSelector {
+    height: 42px;
+    .select {
+      // height: 80%;
+      display: block;
       float: left;
+      font-size: 11pt;
+      // float: left;
+      // max-height: 100px;
+      // overflow-y: scroll;
+    }
+    .select-year {
       width: calc(100% - 37px - 18px);
       margin-left: 7px;
     }
