fixed the loading spinner

--- a/src/components/loadingPanes/MainLoadingPane.styl
+++ b/src/components/loadingPanes/MainLoadingPane.styl
@@ -8,6 +8,10 @@
   left: 0px;
   background-color: rgb(220, 220, 220);
   z-index: 1000000;
+  opacity: 1;
+  transition-duration: .5s;
+  -webkit-transition-property: opacity; /* Safari */
+  transition-property: opacity;
   .loadingSpinner {
     position: absolute;
     z-index: 1000;
