started revamping the styles

--- a/src/components/legend/Legend.styl
+++ b/src/components/legend/Legend.styl
@@ -12,6 +12,7 @@
     padding: 4px;
     background-color: #0A83C9;
     height: 28px;
+    box-shadow: 0 4px 4px -2px rgba(0,0,0,.4);
     .legend-title{
       color: white;
       font-size: 12pt;
@@ -31,6 +32,12 @@
   }
   .legend-content{
     padding: 4px;
+    .featureCountMessage{
+      opacity: .8;
+      font-size: 10pt;
+      font-weight: 400;
+      margin-left: 20px;
+    }
     .legend-nodesContainer{
       padding: 4px;
     }
