--- a/src/components/sidebar/Sidebar.styl
+++ b/src/components/sidebar/Sidebar.styl
@@ -13,6 +13,28 @@
     left: 36px;
     width: calc(100% - 36px);
     height: 100vh;
-    padding: 8px;
+    // padding: 8px;
+  }
+}
+
+.header {
+  // border-bottom: 2px solid #0A83C9;
+  background-color: white;
+  box-shadow: 0 4px 4px -2px rgba(0,0,0,.25);
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 50px;
+  z-index: 99;
+  position: relative
+  line-height: 50px;
+  .header-title {
+    font-size: 16pt;
+    font-weight: 600;
+    // color: #0A83C9;
+    color: rgb(100,100,100)
+    line-height: 27px;
+    .fa-filter {
+      margin-left: 10px;
+    }
   }
 }
