--- a/src/components/sidebar/navBar/NavBar.styl
+++ b/src/components/sidebar/navBar/NavBar.styl
@@ -7,12 +7,15 @@
   top: 0px;
   left: 0px;
   z-index: 100;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  // box-shadow: 0px 50px 10px rgba(0, 0, 0, 0.5);
 }
 .navBarTooltip{
   padding: 4px!important;
   font-size: 12pt!important;
   background-color: rgba(10,131,201, 1)!important;
   opacity: 1!important;
+  z-index: 500!important
 }
 .__react_component_tooltip.place-right:after {
   border: 0 !important;
