--- a/src/components/sidebar/analysisPane/filters/Filter.styl
+++ b/src/components/sidebar/analysisPane/filters/Filter.styl
@@ -32,24 +32,11 @@
       margin-right: 2.5px;
       user-select: none;
       cursor: default;
+      
     }
   }
   .titleAndControls {
     margin-bottom: 5px;
-    .titleInput {
-      background-color: rgba(255, 255, 255, 0);
-      border: none;
-      border-bottom: 1px solid rgb(235, 235, 235);
-      height: 100%;
-      color: rgb(20, 20, 20);
-      padding: 3px;
-      margin-left: 5px;
-      width: calc(100% - 75px);
-      font-style: italic;
-      &:focus {
-        border-bottom: 1px solid rgb(150, 150, 150);
-      }
-    }
     .activeSlider {
       float: right;
       margin-right: 10px;
@@ -78,15 +65,12 @@
   .fieldSelector {
     height: 42px;
     .select {
-      // height: 80%;
       display: block;
-      float: left;
+      float: right;
       font-size: 11pt;
-      // float: left;
-      // max-height: 100px;
-      // overflow-y: scroll;
     }
     .select-field {
+      margin-right: 5px;
       width: calc(100% - 37px - 18px);
       margin-left: 7px;
     }
@@ -94,15 +78,13 @@
   .yearSelector {
     height: 42px;
     .select {
-      // height: 80%;
       display: block;
-      float: left;
+      float: right;
       font-size: 11pt;
-      // float: left;
-      // max-height: 100px;
-      // overflow-y: scroll;
     }
     .select-year {
+      float: right;
+      margin-right: 5px;
       width: calc(100% - 37px - 18px);
       margin-left: 7px;
     }
@@ -113,11 +95,11 @@
     .sliderContainer {
       height: 40px;
       position: relative;
-      float: right;
+      float: left;
       top: 50%;
       margin-top: -20px;
       margin-left: 10px;
-      margin-right: 10px;
+      // margin-right: 10px;
       width: calc(100% - 47.45px - 10px - 20px);
       .slider {
         position: absolute;
