--- a/src/components/sidebar/analysisPane/filters/FiltersSection.styl
+++ b/src/components/sidebar/analysisPane/filters/FiltersSection.styl
@@ -1,64 +1,3 @@
-.header {
-  border-bottom: 2px solid #0A83C9;
-  height: 30px;
-  .header-title {
-    font-size: 14pt;
-    font-weight: 600;
-    color: #0A83C9;
-    line-height: 27px;
-    .fa-filter {
-      margin-left: 10px;
-    }
-    .featureCountMessage{
-      opacity: .8;
-      font-size: 10pt;
-      font-weight: 400;
-      margin-left: 20px;
-    }
-    .addFilterButton {
-      position: relative;
-      height: 22.5px;
-      width: 22.5px;
-      border-radius: 100%;
-      float: right;
-      background-color: #0A83C9;
-      box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25);
-      margin: 3px;
-      cursor: pointer;
-      transition-duration: .2s;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      .faPlusRotator {
-        height: 100%;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        -webkit-backface-visibility: hidden;
-        transition-duration: .15s;
-        transition-timing-function: linear;
-        .fa-plus{
-          font-size: 11pt;
-          color: white;
-          margin-top: 2px;
-        }
-      }
-      &:hover {
-        box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4);
-      }
-    }
-    .addFilterButton-inactive{
-      opacity: .5;
-      box-shadow: 0px 0px 6px rgba(0, 0, 0, 0);
-      cursor: default;
-      &:hover{
-        box-shadow: 0px 0px 6px rgba(0, 0, 0, 0);
-      }
-    }
-  }
-}
-
 .filtersContainer {
   margin-top: 5px;
   display: flex;
@@ -71,9 +10,66 @@
     line-height: 143px;
     user-select: none;
     cursor: default;
-    .noFiltersMessage{
+    .noFiltersMessage {
       font-size: 20pt;
-      color: rgb(237,237,237);
+      color: rgb(237, 237, 237);
+    }
+  }
+}
+
+.addFilterMessage {
+  opacity: .7;
+  color: #0A83C9;
+  font-style: italic;
+  font-size: 11pt;
+  float: right;
+  line-height: 50px;
+  margin-right: 10px;
+}
+
+.header {
+  .addFilterButton {
+    position: relative;
+    top: 25px;
+    height: 30px;
+    width: 30px;
+    border-radius: 100%;
+    float: right;
+    background-color: #0A83C9;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
+    margin: 3px;
+    margin-top: -15px;
+    cursor: pointer;
+    transition-duration: .2s;
+    transition-property: box-shadow;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .faPlusRotator {
+      height: 100%;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      -webkit-backface-visibility: hidden;
+      transition-duration: .15s;
+      transition-timing-function: linear;
+      .fa-plus {
+        font-size: 11pt;
+        color: white;
+        margin-top: 2px;
+      }
+    }
+    &:hover {
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    }
+  }
+  .addFilterButton-inactive {
+    opacity: .5!important;
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0);
+    cursor: default;
+    &:hover {
+      box-shadow: 0px 0px 6px rgba(0, 0, 0, 0);
     }
   }
 }
