--- a/src/components/sidebar/analysisPane/visualization/Visualizer.styl
+++ b/src/components/sidebar/analysisPane/visualization/Visualizer.styl
@@ -36,20 +36,6 @@
   }
   .titleAndControls {
     margin-bottom: 5px;
-    .titleInput {
-      background-color: rgba(255, 255, 255, 0);
-      border: none;
-      border-bottom: 1px solid rgb(235, 235, 235);
-      height: 100%;
-      color: rgb(20, 20, 20);
-      padding: 3px;
-      margin-left: 5px;
-      width: calc(100% - 75px);
-      font-style: italic;
-      &:focus {
-        border-bottom: 1px solid rgb(150, 150, 150);
-      }
-    }
     .activeSlider {
       float: right;
       margin-right: 10px;
@@ -78,15 +64,13 @@
   .fieldSelector {
     height: 42px;
     .select {
-      // height: 80%;
       display: block;
       float: left;
       font-size: 11pt;
-      // float: left;
-      // max-height: 100px;
-      // overflow-y: scroll;
     }
     .select-field {
+      margin-right: 5px;
+      float: right;
       width: calc(100% - 37px - 18px);
       margin-left: 7px;
     }
@@ -94,15 +78,13 @@
   .yearSelector {
     height: 42px;
     .select {
-      // height: 80%;
       display: block;
       float: left;
       font-size: 11pt;
-      // float: left;
-      // max-height: 100px;
-      // overflow-y: scroll;
     }
     .select-year {
+      margin-right: 5px;
+      float: right;
       width: calc(100% - 37px - 18px);
       margin-left: 7px;
     }
@@ -111,7 +93,7 @@
     height: 42px;
     .select-classNum{
       float: left;
-      width: 50px;
+      width: 65px;
       margin-left: 7px;
     }
     .visSection-title-palette{
@@ -120,7 +102,7 @@
     .select-palette{
       float: right;
       width: 150px;
-      margin-right: 7px;
+      margin-right: 5px;
       margin-left: 7px;
     }
   }
