--- a/src/components/legend/Legend.styl
+++ b/src/components/legend/Legend.styl
@@ -32,14 +32,26 @@
   }
   .legend-content{
     padding: 4px;
+    .legend-nodesContainer{
+      padding: 4px;
+    }
+  }
+  .featureCountContainer{
+    position: absolute;
+    background-color: white;
+    top: calc(100% + 5px) ;
+    width: 100%;
+    height: 30px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
+    border-radius: 30px;
+    text-align: center;
+    line-height: 27px;
     .featureCountMessage{
       opacity: .8;
       font-size: 10pt;
       font-weight: 400;
-      margin-left: 20px;
-    }
-    .legend-nodesContainer{
-      padding: 4px;
+      color: #0A83C9;
+      // font-style: italic;
     }
   }
 }
