--- a/src/components/sidebar/analysisPane/filters/FiltersSection.styl
+++ b/src/components/sidebar/analysisPane/filters/FiltersSection.styl
@@ -65,7 +65,7 @@
     }
   }
   .addFilterButton-inactive {
-    opacity: .5!important;
+    background-color: rgba(10, 131, 201, .75);
     box-shadow: 0px 0px 6px rgba(0, 0, 0, 0);
     cursor: default;
     &:hover {
