revamping filter styles

--- a/src/components/sidebar/Sidebar.styl
+++ b/src/components/sidebar/Sidebar.styl
@@ -31,7 +31,8 @@
     font-size: 16pt;
     font-weight: 600;
     // color: #0A83C9;
-    color: rgb(100,100,100)
+    // color: #11639E;
+    color: rgb(110,110,110);
     line-height: 27px;
     .fa-filter {
       margin-left: 10px;
