--- a/src/components/sidebar/analysisPane/commonComponents/ActiveSlider.styl
+++ b/src/components/sidebar/analysisPane/commonComponents/ActiveSlider.styl
@@ -1,6 +1,7 @@
 .activeSlider{
-  height: 100%;
+  // height: 100%;
   width: 25px;
+  // transform: rotate(-90deg);
   .slidingContainer{
     width: 100%
     height: 10px;
