--- a/src/components/sidebar/analysisPane/visualization/Visualizer.styl
+++ b/src/components/sidebar/analysisPane/visualization/Visualizer.styl
@@ -8,8 +8,8 @@
   box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
   border-top: .5px solid rgb(200, 200, 200);
   border-left: .5px solid rgb(200, 200, 200);
-  transition-duration: .08s;
-  transition-timing-function: linear;
+  transition: right 0.25s ease, box-shadow 0.08s linear;
+  right: 100%
   &:hover {
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
     background-color: rgb(252, 252, 252);
