--- a/src/components/legend/Legend.styl
+++ b/src/components/legend/Legend.styl
@@ -6,23 +6,26 @@
   min-width: 200px;
   max-width: 300px;
   background-color: white;
+  border-radius: 5px;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
   pointer-events: auto;
   .legend-titleBar{
     padding: 4px;
     background-color: #0A83C9;
     height: 28px;
-    box-shadow: 0 4px 4px -2px rgba(0,0,0,.4);
+    // box-shadow: 0 4px 4px -2px rgba(0,0,0,.4);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     .legend-title{
       color: white;
       font-size: 12pt;
       font-weight: bold;
       width: 100%;
-      .fa-list-ul{
-        float: right;
-        font-weight: 200;
-        margin-top: 3px;
-      }
+      // .fa-list-ul{
+      //   float: right;
+      //   font-weight: 200;
+      //   margin-top: 3px;
+      // }
     }
   }
   .legend-subtitleBar{
@@ -33,12 +36,12 @@
   .legend-content{
     padding: 4px;
     .legend-nodesContainer{
-      padding: 4px;
+      padding: 2px;
     }
   }
   .featureCountContainer{
     position: absolute;
-    background-color: white;
+    background-color: rgba(255,255,255,.9);
     top: calc(100% + 5px) ;
     width: 100%;
     height: 30px;
