--- a/src/components/legend/LegendEntry.styl
+++ b/src/components/legend/LegendEntry.styl
@@ -1,6 +1,9 @@
 .legendEntry-active{
   &:hover{
-    background-color: rgba(0,0,0,.05)
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
+    .fa-search-plus{
+      opacity: 1;
+    }
     .legendEntry-colorSquare{
       opacity: 1
       .legendEntry-colorSquare-inner{
@@ -15,8 +18,16 @@
   position: relative;
   width: 100%;
   border-radius: 3px;
+  transition: box-shadow 0.08s linear;
   cursor: pointer;
-  // margin-bottom: 2px;
+  .fa-search-plus{
+    line-height: 25px;
+    margin-right: 5px;
+    opacity: 0;
+    float: right;
+    transition: color 0.08s linear;
+    color: rgb(100,100,100);
+  }
   .legendEntry-colorSquare{
     height: 15px;
     width: 15px;
@@ -52,5 +63,7 @@
   }
   .legendEntry-title{
     float: left;
+    // this takes into account the zoom icon;
+    margin-right: 18.93px;
   }
 }
