--- a/src/components/sidebar/Sidebar.styl
+++ b/src/components/sidebar/Sidebar.styl
@@ -4,7 +4,7 @@
   left:0px;
   height: 100vh;
   width: 436px;
-  background-color: white;
+  background-color: rgb(250, 250, 250);
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
   pointer-events: auto;
   .sidebarPane{
