--- a/src/components/sidebar/analysisPane/filters/Filter.styl
+++ b/src/components/sidebar/analysisPane/filters/Filter.styl
@@ -5,7 +5,7 @@
   padding-top: 5px;
   padding-right: 4px;
   margin-top: 5px;
-  background-color: rgb(250, 250, 250);
+  background-color: white;
   box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
   border-top: .5px solid rgb(200, 200, 200);
   border-left: .5px solid rgb(200, 200, 200);
@@ -13,7 +13,7 @@
   right: 100%;
   &:hover {
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
-    background-color: rgb(252, 252, 252);
+    background-color: white;
   }
   .filterSection {
     width: 100%;
