--- a/src/mapbox/Map.styl
+++ b/src/mapbox/Map.styl
@@ -31,7 +31,7 @@
       width: calc(100% - 6px);
       position: relative;
       left: 3px;
-      background-color: rgb(100,100,100);
+      background-color: rgb(150,150,150);
     }
     .propDisplayContainer{
      padding: 6px;
@@ -75,6 +75,7 @@
           border-right-width: .5px;
           border-right-style: solid;
           border-right-color: rgb(220,220,220);
+          line-height: 16px;
         }
         .td-propert-long{
 
