added more functionality to the popup

--- a/src/components/sidebar/analysisPane/filters/Filter.styl
+++ b/src/components/sidebar/analysisPane/filters/Filter.styl
@@ -109,7 +109,7 @@
     // length of Range title is 47.45
     height: 63px;
     position: relative;
-    float: right
+    float: right;
     .sliderContainer {
       height: 40px;
       position: relative;
