--- a/src/components/sidebar/navBar/NavBarButton.styl
+++ b/src/components/sidebar/navBar/NavBarButton.styl
@@ -6,6 +6,22 @@
   line-height: 36px;
   font-size: 16.5pt;
   cursor: pointer;
+  .navBarButton-count{
+    height: 13px;
+    width: 13px;
+    // color: rgba(255, 183, 77, 1);
+    color: white
+    // background-color: white;
+    background-color: rgba(255, 183, 77, 1);
+    border-radius: 13px;
+    line-height: 13px;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    font-size: 8pt;
+    font-weight: bold;
+    text-shadow: 0px 0px 1px rgba(0, 0, 0, 1);
+  }
 }
 .navBarButton-active{
   color: white;
