--- a/src/components/sidebar/downloadsPane/DownloadsPane.styl
+++ b/src/components/sidebar/downloadsPane/DownloadsPane.styl
@@ -13,6 +13,11 @@
       line-height: 75px;
       box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
       transition-duration: .2s;
+      user-select: none;
+      &:hover{
+        transition-duration: .2s;
+        box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.45);
+      }
       .downloadsPane-choice-title{
         font-size: 13.5pt;
         .downloadsPane-choice-icon{
@@ -25,10 +30,10 @@
       margin-left: 5px;
       margin-right: 2.5px;
       margin-bottom: 2.5px;
-      color: #89479B;
+      color: #0A83C9;
       &:hover{
         color: white;
-        background-color: #89479B;
+        background-color: #0A83C9;
       }
     }
     .downloadsPane-choices-csv{
