--- a/src/components/legend/Legend.styl
+++ b/src/components/legend/Legend.styl
@@ -53,7 +53,9 @@
       font-size: 10pt;
       font-weight: 400;
       color: #0A83C9;
-      // font-style: italic;
+      .fa-filter{
+        margin-right: 10px;
+      }
     }
   }
 }
